Created User Controller and connected to database

--- a/OpenLockerWebApi/appsettings.json
+++ b/OpenLockerWebApi/appsettings.json
@@ -1,10 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "OpenLockerDatabaseSettings": {
+        "ConnectionString": "mongodb://localhost:27017/openlocker",
+        "DatabaseName": "openlocker"
     }
-  },
-  "AllowedHosts": "*"
 }
