--- a/OpenLockerWebApi/OpenLockerWebApi.csproj
+++ b/OpenLockerWebApi/OpenLockerWebApi.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.1.15" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.0-beta1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
