--- a/OpenLockerWebApi/OpenLockerWebApi.csproj
+++ b/OpenLockerWebApi/OpenLockerWebApi.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0-beta.4" />
+    <PackageReference Include="dotenv.net" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.1.15" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.0-beta1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
