--- a/OpenLockerWebApi/OpenLockerWebApi.csproj
+++ b/OpenLockerWebApi/OpenLockerWebApi.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netcoreapp5</TargetFramework>
+    <LangVersion>Latest</LangVersion>
     <UserSecretsId>aspnet-OpenLockerWebApi-CEB67CE2-DE60-4FD4-8240-5D988B2AD209</UserSecretsId>
     <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
   </PropertyGroup>
@@ -11,6 +12,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0-beta.4" />
     <PackageReference Include="dotenv.net" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="3.1.15" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.0-beta1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
