Listing files from inner directory working

--- a/OpenLockerWebApi/OpenLockerWebApi.csproj
+++ b/OpenLockerWebApi/OpenLockerWebApi.csproj
@@ -7,6 +7,10 @@
     <WebProject_DirectoryAccessLevelKey>0</WebProject_DirectoryAccessLevelKey>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\gat78\source\repos\OpenLockerWebApi\OpenLockerWebApi\OpenLockerWebApi.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.8.4" />
